# sam3dbody

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
licenses/: SAM-LICENSE.txt
scripts/: package_source.py
specs/: COMMON_RULES.md  INDEX.md
specs/api/: cli.md  inference_pipeline.md  model_interface.md  output_data_model.md  public_api.md
specs/architecture/: dependency_rules.md  overview.md  package_layout.md  third_party.md
specs/decisions/: ADR-0001-third-party-wrapper.md
specs/development/: coding.md  dependencies.md  release.md  testing.md
src/sam3dbody/: __init__.py  cli.py  environment.py  exceptions.py  model.py  paths.py  result.py  session.py  smoke.py  upstream_setup.py  validation.py
src/sam3dbody/adapters/: __init__.py  dependencies.py  loader.py  upstream.py
tests/: test_cli.py  test_dependencies.py  test_environment.py  test_packaging.py  test_paths.py  test_public_api.py  test_real_inference_smoke.py  test_smoke.py  test_upstream_loader.py  test_upstream_predict.py  test_upstream_setup.py
