[project]
name = "sam3dbody"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "t-34400", email = "34400mt@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sam3dbody = "sam3dbody:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
