[project]
name = "sam3dbody"
version = "0.1.0"
description = "Python wrapper for SAM 3D Body"
readme = "README.md"
authors = [
    { name = "t-34400", email = "34400mt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
