[project]
name = "sam3dbody"
version = "0.1.0"
description = "Python wrapper for SAM 3D Body"
readme = "README.md"
authors = [
    { name = "t-34400", email = "34400mt@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python",
    "yacs",
    "scikit-image",
    "einops",
    "timm",
    "pandas",
    "rich",
    "hydra-core",
    "huggingface_hub",
]


[project.optional-dependencies]
inference = [
    "pytorch-lightning",
    "pyrender",
    "opencv-python",
    "yacs",
    "scikit-image",
    "einops",
    "timm",
    "dill",
    "pandas",
    "rich",
    "hydra-core",
    "hydra-submitit-launcher",
    "hydra-colorlog",
    "pyrootutils",
    "webdataset",
    "chump",
    "networkx==3.2.1",
    "roma",
    "joblib",
    "appdirs",
    "ffmpeg",
    "cython",
    "jsonlines",
    "xtcocotools",
    "loguru",
    "optree",
    "fvcore",
    "pycocotools",
    "tensorboard",
    "huggingface_hub",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sam3dbody = "sam3dbody.cli:main"

[tool.pytest.ini_options]
markers = [
    "real_inference: opt-in tests requiring upstream source, CUDA, weights, and sample images",
]
